fix: resolve CORS error - add CorsConfig WebMvcConfigurer and fix wildcard headers with credentials